Add Model, Controller and Views Category

--- a/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
+++ b/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     <li>@Html.ActionLink("Cities", "Index", "Cities")</li>
                     <li>@Html.ActionLink("Companies", "Index", "Companies")</li>
                     <li>@Html.ActionLink("Users", "Index", "Users")</li>
+                    <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
