--- a/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
+++ b/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
@@ -21,15 +21,36 @@
                 @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Departments", "Index", "Deparments")</li>
-                    <li>@Html.ActionLink("Cities", "Index", "Cities")</li>
-                    <li>@Html.ActionLink("Companies", "Index", "Companies")</li>
-                    <li>@Html.ActionLink("Users", "Index", "Users")</li>
-                    <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
+                <ul class="nav navbar-nav">                   
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav" style="font-weight:bold;">
+                            <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
+                            <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Cities", "Index", "Cities")</li>
+                                        <li>@Html.ActionLink("Companies", "Index", "Companies")</li>
+                                        <li>@Html.ActionLink("Departments", "Index", "Deparments")</li>
+                                        <li>@Html.ActionLink("Users", "Index", "Users")</li>
+                                    </ul>
+                                </li>
+                            }
+                            @if (User.IsInRole("User"))
+                            {
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">File<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
+                                        <li>@Html.ActionLink("Taxes", "Index", "Taxes")</li>
+                                    </ul>
+                                </li>
+                            }
+                        </ul>
+                    </div>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
