--- a/Ecomerce/Ecomerce/Views/Taxes/Create.cshtml
+++ b/Ecomerce/Ecomerce/Views/Taxes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ecomerce.Models.Category
+﻿@model Ecomerce.Models.Tax
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Category</h4>
+    <h4>Tax</h4>
     @Html.HiddenFor(model => model.CompanyId)
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -25,16 +25,24 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.Rate, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Rate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Rate, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-primary" />
-            @Html.ActionLink("Back to List", "Index", new { }, new {@class = "btn btn-success" })
+            @Html.ActionLink("Back to List", "Index",new { },new { @class="btn btn-success"})
         </div>
     </div>
 </div>
 }
 
 <div>
-   
+
 </div>
 
 @section Scripts {
