--- a/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
+++ b/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">File<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
+                                        <li>@Html.ActionLink("Products", "Index", "Products")</li>
                                         <li>@Html.ActionLink("Taxes", "Index", "Taxes")</li>
                                     </ul>
                                 </li>
