--- a/Ecomerce/Ecomerce/Views/Categories/Edit.cshtml
+++ b/Ecomerce/Ecomerce/Views/Categories/Edit.cshtml
@@ -28,14 +28,15 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-primary" />
+            @Html.ActionLink("Back to List", "Index", new { }, new {@Class="btn btn-success" })
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+
 </div>
 
 @section Scripts {
