--- a/Ecomerce/Ecomerce/Views/Products/Index.cshtml
+++ b/Ecomerce/Ecomerce/Views/Products/Index.cshtml
@@ -30,7 +30,7 @@
             @Html.DisplayNameFor(model => model.Image)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Remarks)
+            @Html.DisplayNameFor(model => model.Stock)
         </th>
         <th></th>
     </tr>
@@ -59,7 +59,7 @@
             }
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Remarks)
+            @Html.DisplayFor(modelItem => item.Stock)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ProductId }, new { @Class = "btn btn-warning" }) |
