--- a/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
+++ b/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                                         <li>@Html.ActionLink("Cities", "Index", "Cities")</li>
                                         <li>@Html.ActionLink("Companies", "Index", "Companies")</li>
                                         <li>@Html.ActionLink("Departments", "Index", "Deparments")</li>
+                                        <li>@Html.ActionLink("States", "Index", "States")</li>
                                         <li>@Html.ActionLink("Users", "Index", "Users")</li>
                                     </ul>
                                 </li>
@@ -45,6 +46,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">File<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
+                                        <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                                         <li>@Html.ActionLink("Products", "Index", "Products")</li>
                                         <li>@Html.ActionLink("Taxes", "Index", "Taxes")</li>
                                         <li>@Html.ActionLink("WareHouses", "Index", "WareHouses")</li>
