Add Controller OrdersController, combos helper, dbHelper and MovementsHelper.

--- a/Ecomerce/Ecomerce/Views/Products/Index.cshtml
+++ b/Ecomerce/Ecomerce/Views/Products/Index.cshtml
@@ -58,7 +58,7 @@
                 <img src="@Url.Content(item.Image)" alt="Image" style="width:100px;height:100px;max-width: 100%; height: auto;" />
             }
         </td>
-        <td>
+        <td align="right">
             @Html.DisplayFor(modelItem => item.Stock)
         </td>
         <td>
