--- a/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
+++ b/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
@@ -52,6 +52,12 @@
                                         <li>@Html.ActionLink("WareHouses", "Index", "WareHouses")</li>
                                     </ul>
                                 </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Movements<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
+                                    </ul>
+                                </li>
                             }
                         </ul>
                     </div>
