--- a/Ecomerce/Ecomerce/Views/Companies/Create.cshtml
+++ b/Ecomerce/Ecomerce/Views/Companies/Create.cshtml
@@ -61,7 +61,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DepartmentId, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
@@ -69,7 +69,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CityId, "CityId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CityId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CityId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CityId, "", new { @class = "text-danger" })
@@ -92,28 +92,7 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
-        $(document).ready(function () {
-            $("#DepartmentId").change(function () {
-                $("#CityId").empty();
-                $("#CityId").append('<option value="0">[Select a City...]</option>');
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("GetCities")',
-                    dataType: 'json',
-                    data: { departmentId: $("#DepartmentId").val() },
-                    success: function (data) {
-                        $.each(data, function (i, data) {
-                            $("#CityId").append('<option value="'
-                             + data.CityId + '">'
-                             + data.Name + '</option>');
-                        });
-                    },
-                    error: function (ex) {
-                        alert('Failed to retrieve Cities.' + ex);
-                    }
-                });
-                return false;
-            })
-        });
+        var Url = '@Url.Action("GetCities", "Generic")';
     </script>
 }
+
