--- a/Ecomerce/Ecomerce/Views/Companies/Index.cshtml
+++ b/Ecomerce/Ecomerce/Views/Companies/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Ecomerce.Models.Company>
+﻿@model PagedList.PagedList<Ecomerce.Models.Company>
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Company";
@@ -7,60 +8,69 @@
 <h2>Company</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", new { }, new { @Class   = "btn btn-primary"})
+    @Html.ActionLink("Create New", "Create", new { }, new { @Class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Department.Name)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Department.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.City.Name)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().City.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Phone)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Phone)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Address)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Logo)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Logo)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Department.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @if (!string.IsNullOrEmpty(item.Logo))
-            {
-                <img src="@Url.Content(item.Logo)" alt="Image" style="width:100px;height:100px;max-width: 100%; height: auto;" />
-            }
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.CompanyId }, new { @Class = "btn btn-warning" }) |
-            @Html.ActionLink("Details", "Details", new { id = item.CompanyId }, new { @Class = "btn btn-primary" }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.CompanyId }, new { @Class = "btn btn-danger" })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Department.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @if (!string.IsNullOrEmpty(item.Logo))
+                {
+                    <img src="@Url.Content(item.Logo)" alt="Image" style="width:100px;height:100px;max-width: 100%; height: auto;" />
+                }
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.CompanyId }, new { @Class = "btn btn-warning" }) |
+                @Html.ActionLink("Details", "Details", new { id = item.CompanyId }, new { @Class = "btn btn-primary" }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.CompanyId }, new { @Class = "btn btn-danger" })
+            </td>
+        </tr>
+    }
 
 </table>
+Page: @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber), of: @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index", new
+{
+    page,
+    sortOrder =
+    ViewBag.CurrentSort,
+    currentFilter = ViewBag.CurrentFilter
+}))
