--- a/Ecomerce/Ecomerce/Views/Customers/Delete.cshtml
+++ b/Ecomerce/Ecomerce/Views/Customers/Delete.cshtml
@@ -10,6 +10,7 @@
 <div>
     <h4>Customer</h4>
     <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.City.Name)
@@ -17,14 +18,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.City.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Company.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Company.Name)
         </dd>
 
         <dt>
@@ -77,12 +70,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-primary" /> |
+            @Html.ActionLink("Back to List", "Index", new { }, new { @class="btn btn-success"})
         </div>
     }
 </div>
