--- a/Ecomerce/Ecomerce/Views/Users/Index.cshtml
+++ b/Ecomerce/Ecomerce/Views/Users/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<Ecomerce.Models.User>
+﻿@model PagedList.PagedList<Ecomerce.Models.User>
+@using PagedList.Mvc;
+{
+
+}
 
 @{
     ViewBag.Title = "Users";
@@ -7,47 +11,48 @@
 <h2>Users</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", new { }, new { @class = "btn btn-primary"  })
+    @Html.ActionLink("Create New", "Create", new { }, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.City.Name)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().City.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Company.Name)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Department.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Department.Name)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Company.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().UserName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FullName)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().FullName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Phone)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Phone)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Address)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Photo)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Photo)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.City.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Company.Name)
+            @Html.DisplayFor(modelItem => item.Department.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Department.Name)
+            @Html.DisplayFor(modelItem => item.Company.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UserName)
@@ -68,11 +73,19 @@
             }
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.UserId }, new { @class = "btn btn-warning" } ) |
-            @Html.ActionLink("Details", "Details", new { id=item.UserId }, new { @class = "btn btn-primary" } ) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.UserId }, new { @class = "btn btn-danger" } )
+            @Html.ActionLink("Edit", "Edit", new { id = item.UserId }, new { @class = "btn btn-warning" }) |
+            @Html.ActionLink("Details", "Details", new { id = item.UserId }, new { @class = "btn btn-primary" }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.UserId }, new { @class = "btn btn-danger" })
         </td>
     </tr>
-}
+    }
 
 </table>
+Page: @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber), Of: @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index", new
+{
+    page,
+    sortOrder =
+    ViewBag.CurrentSort,
+    currentFilter = ViewBag.CurrentFilter
+}))
