--- a/Ecomerce/Ecomerce/Views/WareHouses/Create.cshtml
+++ b/Ecomerce/Ecomerce/Views/WareHouses/Create.cshtml
@@ -72,4 +72,8 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript">
+        var Url = '@Url.Action("GetCities", "Generic")';
+    </script>
 }
+
