--- a/Ecomerce/Ecomerce/Views/WareHouses/Index.cshtml
+++ b/Ecomerce/Ecomerce/Views/WareHouses/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Ecomerce.Models.WareHouse>
+﻿@model PagedList.PagedList<Ecomerce.Models.WareHouse>
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "WareHouse";
@@ -7,51 +8,60 @@
 <h2>WareHouse</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", new { }, new { @class="btn btn-primary"})
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.City.Name)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().City.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Department.Name)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Department.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.WareHouseName)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().WareHouseName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Phone)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Phone)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Address)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.City.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Department.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WareHouseName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.WareHouseId }, new { @Class = "btn btn-warning" }) |
-            @Html.ActionLink("Details", "Details", new { id=item.WareHouseId }, new { @Class = "btn btn-primary" }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.WareHouseId }, new { @Class = "btn btn-danger" })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.City.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Department.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.WareHouseName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.WareHouseId }, new { @Class = "btn btn-warning" }) |
+                @Html.ActionLink("Details", "Details", new { id = item.WareHouseId }, new { @Class = "btn btn-primary" }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.WareHouseId }, new { @Class = "btn btn-danger" })
+            </td>
+        </tr>
+    }
 
 </table>
+Page: @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber), Of: @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index", new
+{
+    page,
+    sortOrder =
+    ViewBag.CurrentSort,
+    currentFilter = ViewBag.CurrentFilter
+}))
